# my_way

./: addressbook.pkl  workspace colab.ipynb  workspace copy 2.py  workspace copy.py  workspace.py  workspace_2.py  workspace_project_neo.py  workspace_project_neo_finnished.py
GoITPythonCore-main/module12/pydantic_ex/: pyproject.toml
GoITPythonCore-main/module12/pydantic_ex/src/pydantic_ex/: 04.py  07.py  09.py  10.py  12.py  dotenv_ex.py  field.py  methods
class_neo-analyze/: 1_10.ipynb  1_2.ipynb  1_3.ipynb  1_4.ipynb  1_5.ipynb  1_6.ipynb  1_7.ipynb  1_8.ipynb  1_9.ipynb
class_neo-python/module06/: setup.cfg
hw_neo/: task_10_1_gpt.py  task_12_1.py  task_6_1.py  task_6_2.py  task_8_3 ---- .py  task_8_3.py  task_8_4.py  task_9_1_finnished.py
hw_neo-analyze/: topic_10.2.readme.md  topic_10_1.py  topic_10_2.py  topic_2.py  topic_2_2.py  topic_3_1.py  topic_3_2.py  topic_4_1.py  topic_4_1.readme.md  topic_5_1.py  topic_5_2.py  topic_5_3.py  topic_5_3.readme.md  topic_6.readme.md  topic_6_1.py  topic_6_2.py  topic_6_3.py  topic_7_1.py  topic_7_2.py  topic_7_3.py  topic_8_1.py  topic_9.1.readme.md  topic_9_1.py  topic_fp_1.py  topic_fp_2.py  topic_fp_3.py  topic_fp_4.py  topic_fp_5.py  topic_fp_6.py  topic_fp_7.py  topic_fp_7.readme.md
hw_neo-python/: task_10_1_g.py  task_4_1.py  task_4_2.py  task_4_3.py  task_4_4.py  task_6_3.py  task_6_4.py  task_8_1.py  task_8_2.py  task_8_2.v.2.py
neo/: theory_collections.py  theory_copy%find.py  theory_cycle.py  theory_decimal.py  theory_decorator.py  theory_functional_cod.py  theory_functions-def.py  theory_rec&iter.py  (+3 more)
(+46 files in other folders)
