[metadata]
name = moskali
version = 6
description = Very useful code
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/dummy_user/useful
author = Oleh Andrus
author_email = andrus@test.gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find_namespace:
install_requires =
    faker
include_package_data = true

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    run_main = moskali:main

[options.packages.find]
where = .
